--- a/main.css
+++ b/main.css
@@ -1,28 +1,31 @@
-h1 {
-    text-align: center;
-}
 .tree ul {
     padding-top: 20px; position: relative;
+    
     transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
 }
 
 .tree li {
     float: left; text-align: center;
     list-style-type: none;
     position: relative;
-    padding: 20px 30px 0 5px;
+    padding: 20px 5px 0 5px;
+    
     transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
 }
 
 .tree li::before, .tree li::after{
     content: '';
     position: absolute; top: 0; right: 50%;
-    border-top: 3px solid #ccc;
+    border-top: 1px solid #ccc;
     width: 50%; height: 20px;
 }
 .tree li::after{
     right: auto; left: 50%;
-    border-left: 3px solid #ccc;
+    border-left: 1px solid #ccc;
 }
 
 .tree li:only-child::after, .tree li:only-child::before {
@@ -35,41 +38,45 @@ h1 {
     border: 0 none;
 }
 .tree li:last-child::before{
-    border-right: 3px solid #ccc;
+    border-right: 1px solid #ccc;
     border-radius: 0 5px 0 0;
+    -webkit-border-radius: 0 5px 0 0;
+    -moz-border-radius: 0 5px 0 0;
 }
 .tree li:first-child::after{
     border-radius: 5px 0 0 0;
+    -webkit-border-radius: 5px 0 0 0;
+    -moz-border-radius: 5px 0 0 0;
 }
 .tree ul ul::before{
     content: '';
     position: absolute; top: 0; left: 50%;
-    border-left: 3px solid #ccc;
+    border-left: 1px solid #ccc;
     width: 0; height: 20px;
 }
 .tree li div{
     border: 1px solid #ccc;
-    padding: 10px 20px;
+    padding: 5px 10px;
     text-decoration: none;
-    color: white;
-    font-size: 16px;
+    color: #666;
+    font-family: arial, verdana, tahoma;
+    font-size: 11px;
     display: inline-block;
-    background-color: #142052;
+    
     border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    
     transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
 }
 .tree li div:hover, .tree li div:hover+ul li div {
-    background:white;
-    color: black;
+    background: #c8e4f8; color: #000; border: 1px solid #94a0b4;
 }
-span {
-    margin-top: 10px;
-    color: #00e77f;
-
-}
-.node span {
-    color: #00c1ff
-}
-.attribute {
-    color: #09a7db !important;
+.tree li div:hover+ul li::after, 
+.tree li div:hover+ul li::before, 
+.tree li div:hover+ul::before, 
+.tree li div:hover+ul ul::before{
+    border-color:  #94a0b4;
 }
